--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
     <img src="imgs/img1.png" alt="img1">
 </div>
 <div class="login-container">
-    <h2>Welcome back</h2>
+    <h2>歡迎回來</h2>
     <form action="login.php" method="post"> <!-- 表单提交至 login.php -->
         <div class="form-group">
-            <input type="email" id="email" name="email" placeholder=" 電子郵件地址*" required>
+            <input type="email" id="email" name="email" placeholder=" 電子郵件地址" required>
             <button type="submit" class="continue-button">繼續</button>
         </div>
     </form>
     <div class="signup-link">
-        <p>沒有帳戶? <a href="#" class="green-link">註冊</a></p>
+        <p>沒有帳戶 ? <a href="#" class="green-link">註冊</a></p>
     </div>
     <hr>
     <div class="social-buttons">
         <button class="continue-google">
             <img src="imgs/img2.webp" alt="img2">
-            繼續 Google
+            使用 Google 繼續
         </button>
         <button class="continue-microsoft">
             <img src="imgs/img3.webp" alt="img3">
-            繼續 Microsoft Account
+            使用 Microsoft 帳戶繼續
         </button>
         <button class="continue-apple">
             <img src="imgs/img4.png" alt="img4">
-            繼續 Apple
+            使用 Apple 繼續
         </button>
     </div>
     <div class="link">
         <p>
-            <a href="#" class="green-link">Terms of use</a>|
-            <a href="#" class="green-link">Privacy policy</a>
+            <a href="#" class="green-link">使用條款</a>|
+            <a href="#" class="green-link">隱私政策</a>
         </p>
     </div>
 </div>
