--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
     <h2>歡迎回來</h2>
     <form action="login.php" method="post"> <!-- 表单提交至 login.php -->
         <div class="form-group">
-            <input type="email" id="email" name="email" placeholder=" 電子郵件地址" required>
+            <div class="input-container">
+                <input type="email" id="email" name="email" required>
+                <label for="email" class="input-label">電子郵件地址</label>
+            </div>
             <button type="submit" class="continue-button">繼續</button>
         </div>
     </form>
     <div class="signup-link">
-        <p>沒有帳戶 ? <a href="#" class="green-link">註冊</a></p>
+        <p>沒有帳戶? <a href="#" class="green-link">註冊</a></p>
     </div>
-    <hr>
+    <div class="or-separator">
+        <span>或</span>
+    </div>
     <div class="social-buttons">
         <button class="continue-google">
             <img src="imgs/img2.webp" alt="img2">
@@ -38,11 +43,10 @@
     </div>
     <div class="link">
         <p>
-            <a href="#" class="green-link">使用條款</a>|
+            <a href="#" class="green-link">使用條款</a> |
             <a href="#" class="green-link">隱私政策</a>
         </p>
     </div>
 </div>
-
 </body>
 </html>
